RESOLVED FIXED97632
Fix potential build error on LocalFileSystem::deleteFileSystem
https://bugs.webkit.org/show_bug.cgi?id=97632
Summary Fix potential build error on LocalFileSystem::deleteFileSystem
Dongwoo Joshua Im (dwim)
Reported 2012-09-25 22:34:48 PDT
Non-Chrome build of WebKit with FILE_SYSTEM flag will be broken at LocalFileSystem::deleteFileSystem. Type of the third parameter is PassOwnPtr<AsyncFileSystemCallbacks> in header file, but PassRefPtr<AsyncFileSystemCallbacks> in cpp file. I will upload patch soon.
Attachments
patch (2.04 KB, patch)
2012-09-25 22:58 PDT, Dongwoo Joshua Im (dwim)
no flags
Dongwoo Joshua Im (dwim)
Comment 1 2012-09-25 22:58:48 PDT
Created attachment 165732 [details] patch Modify the type of the parameter.
Taiju Tsuiki
Comment 2 2012-09-26 00:03:23 PDT
Thank you for fixing it, Dongwoo. It looks good to me.
Yuta Kitamura
Comment 3 2012-09-26 00:24:47 PDT
Comment on attachment 165732 [details] patch Looks OK.
WebKit Review Bot
Comment 4 2012-09-26 00:30:24 PDT
Comment on attachment 165732 [details] patch Clearing flags on attachment: 165732 Committed r129602: <http://trac.webkit.org/changeset/129602>
WebKit Review Bot
Comment 5 2012-09-26 00:30:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.