Fix potential build error on LocalFileSystem::deleteFileSystem https://bugs.webkit.org/show_bug.cgi?id=97632

Patch by Dongwoo Joshua Im <dw.im@samsung.com> on 2012-09-26
Reviewed by Yuta Kitamura.

Non-Chrome build of WebKit with FILE_SYSTEM flag will be broken at LocalFileSystem::deleteFileSystem.
Type of the third parameter is PassOwnPtr<AsyncFileSystemCallbacks> in header file,
but PassRefPtr<AsyncFileSystemCallbacks> in cpp file.

Non-Chrome WebKit build with FILE_SYSTEM should be finished successfully.

* Modules/filesystem/LocalFileSystem.cpp:
(WebCore::LocalFileSystem::deleteFileSystem):

Canonical link: https://commits.webkit.org/115618@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129602 268f45cc-cd09-0410-ab3c-d52691b4dbfc